# tello_digital_twin

./: .gitignore  README.md  plot_results.py  plots.py  tello_model.h5  tello_model.keras
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/tello_twin_bringup/share/tello_twin_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tello_twin_bringup/share/tello_twin_bringup/launch/: baseline_twin.launch.py
install/tello_twin_control/lib/tello_twin_control/: cmd_test  gazebo_pose_sender  gz_pose_relay  simple_dynamics
install/tello_twin_control/share/tello_twin_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tello_twin_logging/lib/tello_twin_logging/: logger_node
install/tello_twin_logging/share/tello_twin_logging/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tello_twin_msgs/share/tello_twin_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
scripts/: preprocess_data.py
src/tello_twin_bringup/: setup.cfg  setup.py
src/tello_twin_bringup/models/: simple_drone.sdf
src/tello_twin_bringup/worlds/: simple_drone_world.sdf
src/tello_twin_control/: setup.cfg  setup.py
src/tello_twin_control/tello_twin_control/: gazebo_pose_sender.py.save  gz_pose_relay.py
src/tello_twin_logging/: setup.cfg  setup.py
src/tello_twin_msgs/: setup.cfg  setup.py
