<?xml version="1.0"?>
<package format="3">
  <name>tello_twin_bringup</name>
  <version>0.0.0</version>
  <description>Tello twin bringup package</description>
  <maintainer email="aghilas@todo.todo">aghilas</maintainer>
  <license>MIT</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tello_twin_control</exec_depend>
  <exec_depend>tello_twin_logging</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
