<?xml version="1.0"?>
<package format="3">
  <name>tello_twin_logging</name>
  <version>0.0.0</version>
  <description>Tello twin logging nodes</description>
  <maintainer email="aghilas@todo.todo">aghilas</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
